--- a/server/package.json
+++ b/server/package.json
@@ -14,15 +14,18 @@
   "packageManager": "pnpm@10.24.0",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "express-zod-safe": "^3.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
